--- a/style.css
+++ b/style.css
@@ -11,14 +11,23 @@
     margin: 0;
     box-sizing: border-box;
     min-height: 100vh;
+    display: grid;
+    grid-template-columns: 200px 1fr;
+    grid-template-rows: auto;
+    grid-template-areas: 
+    'header header'
+    'nav img'
+    'footer footer';
   }
-  
+
   .header {
     background-color: var(--primary);
     color: var(--white);
     display: grid;
     align-items: center;
     justify-items: center;
+    grid-area: header;
+    padding: 25px;
   }
   
   .header__title {
@@ -32,9 +41,10 @@
     display: grid;
     row-gap: 24px;
     grid-template-columns: 1fr;
-    min-width: 200px;
+    min-width: 100px;
     justify-items: center;
-    padding: 12px 0 24px;
+    padding: 50px 0 12px;
+    grid-area: nav;
   }
   
   .nav__link, .nav__link--active {
@@ -62,6 +72,18 @@
     box-shadow: var(--gray) 4px 4px 10px 2px;
     border-radius: 3px;
   }
+
+  .img_card__container {
+    border-radius: 3px;
+    display: grid;
+    grid-area: img;
+    grid-template-columns: repeat(auto-fill, minmax(300px,1fr));
+    grid-auto-rows: 350px;
+    padding: 50px;
+    padding-left: 100px;
+    row-gap: 40px;
+    column-gap: 25px;
+  }
   
   .img_card__img {
     border-top-left-radius: 3px;
@@ -76,6 +98,7 @@
     display: grid;
     align-items: center;
     justify-items: center;
+    grid-area: footer;
   }
   
   @media screen and (max-width: 1100px) {
